# stm32-cmake_custom_linker_script

./: CMakeLists.txt  CMakePresets.json  arm-none-eabi-gcc.cmake  vcpkg-configuration.json  vcpkg.json
